# rcc

./: Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
src/: main.rs
src/codegen/: code_generator.rs  codegen.rs
src/lexer/: mod.rs  token.rs
src/parser/: expr.rs  mod.rs  parser.rs  rcc_parser.rs  string.rs  string_parser.rs  token.rs  utils.rs
src/parser/chumsky_parser/: expr.rs  json.rs  mod.rs
test/: test.rcc
