[package]
name = "rcc"
version = "0.1.0"
edition = "2021"
authors = ["Kejian Chi <chiichen@qq.com>"]
license = "	GPL-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chumsky = { version = "1.0.0-alpha.6", features = ["label"] }
ariadne = "0.3.0"
llvm-sys = "140"
